--- a/build.gradle
+++ b/build.gradle
@@ -25,21 +25,19 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-aop')
-	compile('org.springframework.boot:spring-boot-starter-cache')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
-	compile('org.springframework.boot:spring-boot-starter-jdbc')
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-validation')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-web-services')
-	// https://mvnrepository.com/artifact/javax.ejb/ejb
-    compile group: 'javax.ejb', name: 'ejb', version: '2.1'
-	compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
-	compile('org.springframework.session:spring-session-jdbc')
-	runtime('com.h2database:h2')
-	compileOnly('org.springframework.boot:spring-boot-configuration-processor')
+    compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	//compile('org.springframework.boot:spring-boot-starter-aop')
+	//compile('org.springframework.boot:spring-boot-starter-cache')
+	//compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	//compile('org.springframework.boot:spring-boot-starter-data-rest')
+	//compile('org.springframework.boot:spring-boot-starter-jdbc')
+	//compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	//compile('org.springframework.boot:spring-boot-starter-validation')
+	//compile('org.springframework.boot:spring-boot-starter-web-services')
+    //compile group: 'javax.ejb', name: 'ejb', version: '2.1'
+	//compile group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
+	//compile('org.springframework.session:spring-session-jdbc')
+	//runtime('com.h2database:h2')
+	//compileOnly('org.springframework.boot:spring-boot-configuration-processor')
 }
